--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "directory-tree": "^3.3.0",
     "express": "^4.18.1",
     "formidable": "^2.0.1",
     "fs": "^0.0.1-security",
@@ -9,9 +10,8 @@
   "version": "1.0.0",
   "description": "projeto teste upload formidable",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "node teste.js"
   },
   "repository": {
