--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "directory-tree": "^3.3.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "formidable": "^2.0.1",
     "fs": "^0.0.1-security",
+    "mustache-express": "^1.3.2",
     "path": "^0.12.7"
   },
   "name": "upfiles",
